[tool.poetry]
name = "build-engine-randomizer"
version = "0.1.0"
description = ""
authors = ["JamieDouugh <jamie.davies@douugh.com>"]

[tool.poetry.dependencies]
python = "^3.10"
typeguard = "^2.13.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
